--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -28,3 +28,16 @@
     width: 100%;
     bottom: 0;
 }
+
+#chat-page .chat-me .am-list-extra {
+    flex-basis: auto;
+}
+
+#chat-page .chat-me .am-list-content {
+    padding-right: 15px;
+    text-align: right;
+}
+
+.stick-footer {
+    z-index: 10;
+}
